Fixed horizontal scroll

--- a/eat-asado/src/Pages/Register/styles.module.scss
+++ b/eat-asado/src/Pages/Register/styles.module.scss
@@ -41,7 +41,8 @@
 
 	@media #{variables.media-query(max, lg)} {
 		flex-direction: column;
-		overflow: auto;
+		overflow-y: auto;
+		overflow-x: hidden;
 		&::-webkit-scrollbar {
 			display: none;
 		}
